improved Lighthouse score

--- a/app/index.html
+++ b/app/index.html
@@ -2,15 +2,36 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/vtex.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;900&family=Lato:wght@400;900&display=swap"
+      rel="preconnect"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;900&family=Lato:wght@400;900&display=swap"
       rel="stylesheet"
     />
-    <title>Vite + React + TS</title>
+    <!-- Primary Meta Tags -->
+    <title>Loja Vtex</title>
+    <meta name="title" content="Loja Vtex" />
+    <meta name="description" content="Venha conhecer nossas promoções!" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://localhost:4173/" />
+    <meta property="og:title" content="Loja Vtex" />
+    <meta property="og:description" content="Venha conhecer nossas promoções!" />
+    <meta property="og:image" content="http://localhost:4173/vtex-pink.svg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="http://localhost:4173/" />
+    <meta property="twitter:title" content="Loja Vtex" />
+    <meta property="twitter:description" content="Venha conhecer nossas promoções!" />
+    <meta property="twitter:image" content="http://localhost:4173/vtex-pink.svg" />
   </head>
   <body>
     <div id="root"></div>
